--- a/docs/styles.css
+++ b/docs/styles.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .home__theme-pink {
-  background-color: #f1386e;
+  background-color: #FF20B8;
   color: white;
 }
 
